tests/spec/emit/snapshots/struct_zero_fill_lisette_primitives.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Conf { name: string, count: int, on: bool }\n\nfn test() -> Conf {\n  Conf { name: \"x\", .. }\n}\n"
---
package main

type Conf struct {
	name  string
	count int
	on    bool
}

func test() Conf {
	return Conf{
		name:  "x",
		count: 0,
		on:    false,
	}
}
