tests/spec/emit/snapshots/struct_zero_fill_lisette_slice_and_map_non_nil.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Conf { items: Slice<int>, lookup: Map<string, int> }\n\nfn test() -> Conf {\n  Conf { .. }\n}\n"
---
package main

import "fmt"

type Conf struct {
	items  []int
	lookup map[string]int
}

func (c Conf) String() string {
	return fmt.Sprintf("Conf { items: %v, lookup: %v }", c.items, c.lookup)
}

func test() Conf {
	return Conf{
		items:  []int{},
		lookup: map[string]int{},
	}
}
