tests/spec/emit/snapshots/struct_zero_fill_lisette_slice_omitted_map_non_nil.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Conf { items: Slice<int>, lookup: Map<string, int> }\n\nfn test() -> Conf {\n  Conf { .. }\n}\n"
---
package main

type Conf struct {
	items  []int
	lookup map[string]int
}

func test() Conf {
	return Conf{lookup: map[string]int{}}
}
