tests/spec/emit/snapshots/struct_zero_fill_nested_user_struct_recurses.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Inner { opt: Option<int>, items: Slice<int> }\nstruct Outer { inner: Inner }\n\nfn test() -> Outer {\n  Outer { .. }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Inner struct {
	opt   lisette.Option[int]
	items []int
}

type Outer struct {
	inner Inner
}

func test() Outer {
	return Outer{inner: Inner{opt: lisette.MakeOptionNone[int]()}}
}
