tests/spec/emit/snapshots/switch_case_with_remaining_enum_check_routes_to_catchall.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Side { Left, Right }
  struct Pair { a: Side, b: Side }
  
  fn classify(p: Pair) -> int {
    match p {
      Pair { a: Side.Left, b: Side.Left } => 1,
      Pair { a: Side.Right, b: Side.Right } => 2,
      _ => 0,
    }
  }
---
package main

func MakeSideLeft() Side {
	return Side{Tag: SideLeft}
}

func MakeSideRight() Side {
	return Side{Tag: SideRight}
}

type SideTag uint8

const (
	SideLeft SideTag = iota
	SideRight
)

type Side struct {
	Tag SideTag
}

type Pair struct {
	a Side
	b Side
}

func classify(p Pair) int {
	switch p.a.Tag {
	case SideLeft:
		if p.b.Tag == SideLeft {
			return 1
		}
		return 0
	case SideRight:
		if p.b.Tag == SideRight {
			return 2
		}
		return 0
	default:
		return 0
	}
}
