tests/spec/emit/snapshots/tag_exported_string_field_on_embed_blocks_outer_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  #[json]
  struct Inner {
    embed Logger,
    string: int,
  }
  
  struct Outer {
    embed Inner,
    pub name: string,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type Inner struct {
	Logger
	String int `json:"string"`
}

type Outer struct {
	Inner
	Name string
}
